[package]
name = "yusync"
version = "0.1.1"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
async-std = "*"
futures = "*"
bincode = "*"
rand = "*"
ed25519-dalek = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
