[package]
name = "yusync"
version = "0.1.2"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
async-std = "*"
futures = "*"
bincode = "*"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "*", features = ["derive"] }
crypto_box = "*"
once_cell = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
